[package]
name = "lcms2-sys"
version = "3.1.5"
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
build = "src/build.rs"
categories = ["multimedia::images", "external-ffi-bindings" ]
description = "Bindings for liblcms2 (Little CMS) with support for Linux, macOS, and Windows.\n\nSee lcms2 crate for a safe Rust wrapper."
documentation = "https://kornelski.github.io/rust-lcms2-sys/"
homepage = "https://lib.rs/crates/lcms2-sys"
include = ["src/*", "Cargo.toml", "README.md", "vendor/COPYING", "vendor/src/*.c", "vendor/src/*.h", "vendor/include/*.h"]
keywords = ["icc", "color", "profile", "lcms", "sys"]
license = "MIT"
links = "lcms2"
readme = "README.md"
repository = "https://github.com/kornelski/rust-lcms2-sys.git"
edition = "2018"

[lib]
doctest = false

[build-dependencies]
cc = { optional = true, version = "1.0.52" }
pkg-config = { optional = true, version = "0.3.18" }
dunce = "1.0.1"

[dependencies]
libc = "0.2.69"

[features]
default = ["dynamic", "static-fallback", "parallel"]
dynamic = ["pkg-config"]
parallel = ["cc/parallel"]
static = ["cc"]
static-fallback = ["cc"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
